tried to fix the uneven border size

--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,11 @@ body {
 }
 
 .gameBoardCell {
-  border: 2px solid white;
+  outline: 2px solid white;
   width: 50px;
   height: 50px;
+}
+
+.gameBoardCell:hover {
+  background-color: #06255e;
 }
